--- a/serve/index.html
+++ b/serve/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Experiment: ESBuild</title>
-    <link rel="stylesheet" href="./dist/styles.css" />
+    <!-- <link rel="stylesheet" href="./dist/styles.css" /> -->
     <script>
       console.clear();
     </script>
@@ -11,6 +11,6 @@
 
   <body>
     <div id="AppRoot"></div>
-    <script type="module" src="./dist/app.js"></script>
+    <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
